Bug 357408 - KDEInit could not launch '/usr/bin/kblocks'
Summary: KDEInit could not launch '/usr/bin/kblocks'
Status: RESOLVED FIXED
Alias: None
Product: kblocks
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Zhongjie Cai
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-02 00:37 UTC by André Marcelo Alvarenga
Modified: 2016-03-22 10:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2016-01-02 00:37:28 UTC
This error is displayed in a dialog when I close Kblocks lauched from Kickoff and Kicker .

Reproducible: Always




Using Manjaro Linux - KDE Applications 15.12 and Frameworks 5.17.
Comment 1 Andreas Sturmlechner 2016-03-22 10:48:17 UTC
Git commit 52f42548becb9396a45a795984b3f238326dd1bd by Andreas Sturmlechner.
Committed on 21/03/2016 at 19:55.
Pushed by asturmlechner into branch 'Applications/16.04'.

Unbreak startup, add dependencies, drop Phonon
REVIEW: 127433

M  +6    -4    CMakeLists.txt
M  +2    -0    main.cpp

http://commits.kde.org/kblocks/52f42548becb9396a45a795984b3f238326dd1bd