Unbreak startup, add dependencies, drop Phonon

BUG: 357408
REVIEW: 127433